# omega

./: .dir-locals.el  .gitignore  CMakeLists.txt  TODO.org  notes.txt  omeba_lib.code-workspace  omega.cpp  omega.sublime-workspace
include/: brush.h  button.h  button.hpp  common.h  declarative.h  font.h  font_manager.h  forward_declarations.h  gui.h  io.h  mixins.h  panel.h  panel.hpp  point.h  rect.h  renderer.h  size.h  space.h  state.h  state.hpp  text.h  text.hpp  theme.h  window.h  window.hpp
include/prelude/: .gitignore  TODO.md  bit_setter.h  color.h  common.h  dependency_manager.h  event.h  functional.h  hash_function.h  log.h  safe_assert.h  singleton.h  slot.h  static_assert.h  string_utils.cc  string_utils.h  typedefs.h
include/prelude/tests/: event_test.cc
source/: CMakeLists.txt  brush.cc  button.cc  button.cpp  font.cc  font_manager.cc  gui.cc  io.cc  mixins.cc  panel.cc  panel.cpp  state.cc  text.cc  text.cpp  theme.cc  window.cc  window.cpp
test/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  client.cc  client.h  cmake_install.cmake  main.cc  main.cpp  omega_test  renderer_ogl.cc  renderer_ogl.h
